{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 13,
  "lineage": "7110fb81-c47d-d133-7ae2-cebf32a9123b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab0bbbd329f565e6",
            "arn": "arn:aws:ec2:ap-northeast-1:359563219631:instance/i-075fc031cb937f033",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-075fc031cb937f033",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5b3186accef96bf",
            "private_dns": "ip-10-0-1-82.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.82",
            "public_dns": "ec2-18-181-176-34.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.181.176.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e95a957a2282ed3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b12ca83de93fae91",
            "tags": {
              "Name": "tf_test(20220326)"
            },
            "tags_all": {
              "Name": "tf_test(20220326)"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ff1c901bc00e4ef"
            ]
          },
          "dependencies": [
            "aws_security_group.sample_sg",
            "aws_subnet.sample_subnet",
            "aws_vpc.sample_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab0bbbd329f565e6",
            "arn": "arn:aws:ec2:ap-northeast-1:359563219631:instance/i-0631a8a04811464aa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0631a8a04811464aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02531d0e593fde862",
            "private_dns": "ip-10-0-1-182.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-18-181-214-161.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.181.214.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e0cc8f669ec388e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b12ca83de93fae91",
            "tags": {
              "Name": "tf_test(20220326)"
            },
            "tags_all": {
              "Name": "tf_test(20220326)"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ff1c901bc00e4ef"
            ]
          },
          "dependencies": [
            "aws_security_group.sample_sg",
            "aws_subnet.sample_subnet",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sample_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:359563219631:internet-gateway/igw-0f38d2dc501063916",
            "id": "igw-0f38d2dc501063916",
            "owner_id": "359563219631",
            "vpc_id": "vpc-01c52f5bc17d46e41"
          },
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:359563219631:route-table/rtb-0320cf4db40157220",
            "id": "rtb-0320cf4db40157220",
            "owner_id": "359563219631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f38d2dc501063916",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c52f5bc17d46e41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sample_igw",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sample_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000d1370a74640212",
            "route_table_id": "rtb-0320cf4db40157220",
            "subnet_id": "subnet-0b12ca83de93fae91"
          },
          "dependencies": [
            "aws_internet_gateway.sample_igw",
            "aws_route_table.sample_rtb",
            "aws_subnet.sample_subnet",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:359563219631:security-group/sg-08ff1c901bc00e4ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ff1c901bc00e4ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-sg",
            "name_prefix": "",
            "owner_id": "359563219631",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c52f5bc17d46e41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:359563219631:subnet/subnet-0b12ca83de93fae91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b12ca83de93fae91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "359563219631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01c52f5bc17d46e41"
          },
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:359563219631:vpc/vpc-01c52f5bc17d46e41",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c50e65fc1dfd022",
            "default_route_table_id": "rtb-076a98bbc2657dccd",
            "default_security_group_id": "sg-0ff0b2c93b8747597",
            "dhcp_options_id": "dopt-939f98f4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01c52f5bc17d46e41",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076a98bbc2657dccd",
            "owner_id": "359563219631"
          }
        }
      ]
    }
  ]
}